--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>move along</title>
+    <title>swiftlygo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,8 +27,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>This is not the Site you are looking for.</h1>
-        <p>???.</p>
+        <h1>SwiftlyGo</h1>
+        <h4>An Installer for the Swift Programming Language.</h4>
+        <p><i>To install SwiftlyGo run the following command.</i></p>
+        <p>curl -L https://swiftlygo.xyz/install.sh | sudo bash</p>
     </div>
 </body>
 </html>
