--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 </head>
 <body>
     <div class="container">
+      <pre>
+ ____          _  __ _   _        ____       
+/ ___|_      _(_)/ _| |_| |_   _ / ___| ___  
+\___ \ \ /\ / / | |_| __| | | | | |  _ / _ \ 
+ ___) \ V  V /| |  _| |_| | |_| | |_| | (_) |
+|____/ \_/\_/ |_|_|  \__|_|\__, |\____|\___/ 
+                           |___/             
+      </pre>
+
+
         <h1>SwiftlyGo</h1>
         <h4>An Installer for the Swift Programming Language.</h4>
         <p><i>To install SwiftlyGo run the following command.</i></p>
