--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         p {
             color: #666;
         }
+        pre {
+        color: orange;
+      }
     </style>
 </head>
 <body>
@@ -33,7 +36,7 @@
 \___ \ \ /\ / / | |_| __| | | | | |  _ / _ \ 
  ___) \ V  V /| |  _| |_| | |_| | |_| | (_) |
 |____/ \_/\_/ |_|_|  \__|_|\__, |\____|\___/ 
-                           |___/  v0.1a                 
+                           |___/  v0.1a      
       </pre>
 
 
